force-app/main/default/objects/MFJSetting__mdt/MFJSetting__mdt.object-meta.xml
<CustomObject>
    <label>マルエス環境変数</label>
</CustomObject>