force-app/main/default/objects/MFJSetting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>データ型</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>数値</fullName>
                <default>true</default>
                <label>数値</label>
            </value>
            <value>
                <fullName>テキスト</fullName>
            </value>
            <value>
                <fullName>テキストエリア</fullName>
            </value>
            <value>
                <fullName>フラグ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>