force-app/main/default/objects/MFJSetting__mdt/fields/Value3__c.field-meta.xml
<CustomField>
    <fullName>Value3__c</fullName>
    <label>値3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>