force-app/main/default/objects/MFJSetting__mdt/fields/Value4__c.field-meta.xml
<CustomField>
    <fullName>Value4__c</fullName>
    <label>値4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>