force-app/main/default/objects/MFJSetting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Type__c</columns>
    <columns>Value__c</columns>
    <columns>Value2__c</columns>
    <columns>Value3__c</columns>
    <columns>Value4__c</columns>
    <columns>Value5__c</columns>
    <filterScope>Everything</filterScope>
    <label>マルエス環境変数</label>
</ListView>